Created connection.js with DB info

--- a/apiTest.html
+++ b/apiTest.html
@@ -12,7 +12,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="row">
+        <div class="col-md-12 text-center">
+            test
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
