added classes to main.html for categories

--- a/public/main.html
+++ b/public/main.html
@@ -31,7 +31,7 @@
       <div class="field-body">
         <div class="field">
           <div class="control">
-            <input class="input" type="text" placeholder="Enter city name...">
+            <input class="input cityName" type="text" placeholder="Enter city name...">
           </div>
         </div>
       </div>
@@ -55,23 +55,23 @@
         <div class="field">
           <div class="control">
             <label class="checkbox inputs-label-color">
-              <input type="checkbox">
+              <input type="checkbox nightLife">
               Night Life
             </label>
             <label class="checkbox inputs-label-color">
-              <input type="checkbox">
+              <input type="checkbox museums">
               Culture Museums
             </label>
             <label class="checkbox inputs-label-color">
-              <input type="checkbox">
+              <input type="checkbox music">
               Music
             </label>
             <label class="checkbox inputs-label-color">
-              <input type="checkbox">
+              <input type="checkbox foodBev">
               Food and Beverage
             </label>
             <label class="checkbox inputs-label-color">
-              <input type="checkbox">
+              <input type="checkbox hotels">
               Hotels in area
             </label>
           </div>
