--- a/public/main.html
+++ b/public/main.html
@@ -88,6 +88,7 @@
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <!-- <script type="text/javascript" src="js/search.js"></script> -->
 
 </body>
 
