--- a/public/main.html
+++ b/public/main.html
@@ -4,16 +4,104 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-  <title>Vacation Planner</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   <link type="favicon" href="img/favicon.jpg">
+  <title>Vacation Planner</title>
 </head>
 
 <body>
 
   <section class="hero is-primary">
+    <h2>Welcome <span class="member-name"></span></h2>
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title is-1">Vacation Planner</h1>
+        <h2 class="subtitle">One less thing for your to-do list</h2>
+      </div>
+    </div>
+    <a class="logoutBtn" href="/logout">
+      Log out
+    </a>
+  </section>
+
+  <div class="box">
+    <div class="field is-horizontal">
+      <div class="field-label">
+        <label class="label">What city would you like to visit?</label>
+      </div>
+      <div class="field-body">
+        <div class="field">
+          <div class="control">
+            <input class="input true" id="cityName" type="text" placeholder="Enter city name...">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="field is-horizontal">
+      <div class="field-label">
+        <label class="label">How long is your vacation?</label>
+      </div>
+      <div class="field-body">
+        <div class="field">
+          <div class="control">
+            <input class="input true" id="days" type="text" placeholder="Enter number of days...">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="field is-horizontal">
+      <div class="field-label">
+        <label class="label">Please select options to include in your itinerary!</label>
+      </div>
+      <div class="field-body">
+        <div class="field">
+          <div class="control">
+            <label class="checkbox">
+              <input type="checkbox" id="food"> Restaurants
+            </label>
+            <label class="checkbox">
+              <input type="checkbox" id="nightlife"> Night Life
+            </label>
+            <label class="checkbox">
+              <input type="checkbox" id="museums"> Museums
+            </label>
+            <label class="checkbox">
+              <input type="checkbox" id="hotels"> Hotels
+            </label>
+            <label class="checkbox">
+              <input type="checkbox" id="music"> Music
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="field-body">
+      <div class="field">
+        <div class="control">
+          <button class="button is-primary" id="submit">
+            Submit!
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="field is-grouped">
+    <div class="control">
+      <button class="button is-link" id="submit">Submit</button>
+    </div>
+    <div class="control">
+      <button class="button is-link is-light">Cancel</button>
+    </div>
+  </div> -->
+
+  <!-- <section class="hero is-primary">
     <div class="hero-body">
       <div class="container">
         <h1 class="title is-1">Vacation Planner</h1>
@@ -78,17 +166,17 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  <!-- <script type="text/javascript" src="js/search.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script type="text/javascript" src="js/search.js"></script>
 
 </body>
 
