Added <section> class to link background img. Added classes for Welcome, title h1 and subtitle h2 for styling. Added background img which can be switched out at any time

--- a/public/main.html
+++ b/public/main.html
@@ -14,11 +14,11 @@
 
 <body>
 
-  <section class="hero is-primary">
-    <h2>Welcome <span class="member-name"></span></h2>
+  <section class="hero is-medium has-bg-img">
+    <h2 class="welcomeMsg">Welcome <span class="member-name"></span></h2>
     <div class="hero-body">
       <div class="container">
-        <h1 class="title is-1">Vacation Planner</h1>
+        <h1 class="title is-1">Trip Planner</h1>
         <h2 class="subtitle">One less thing for your to-do list</h2>
       </div>
     </div>
@@ -30,7 +30,7 @@
   <div class="box">
     <div class="field is-horizontal">
       <div class="field-label">
-        <label class="label">What city would you like to visit?</label>
+        <label class="label">Which city would you like to visit?</label>
       </div>
       <div class="field-body">
         <div class="field">
@@ -43,7 +43,7 @@
 
     <div class="field is-horizontal">
       <div class="field-label">
-        <label class="label">How long is your vacation?</label>
+        <label class="label">How long is your stay?</label>
       </div>
       <div class="field-body">
         <div class="field">
@@ -84,89 +84,14 @@
     <div class="field-body">
       <div class="field">
         <div class="control">
-          <button class="button is-primary" id="submit">
+          <button class="button" id="submit">
             Submit!
           </button>
         </div>
       </div>
     </div>
   </div>
-
-  <!-- <div class="field is-grouped">
-    <div class="control">
-      <button class="button is-link" id="submit">Submit</button>
-    </div>
-    <div class="control">
-      <button class="button is-link is-light">Cancel</button>
-    </div>
-  </div> -->
-
-  <!-- <section class="hero is-primary">
-    <div class="hero-body">
-      <div class="container">
-        <h1 class="title is-1">Vacation Planner</h1>
-        <h2 class="subtitle">One less thing for your to-do list</h2>
-      </div>
-    </div>
-  </section>
-
-
-  <div class="box">
-    <div class="field is-horizontal">
-      <div class="field-label">
-        <label class="label inputs-label-color">Where are you headed?</label>
-      </div>
-      <div class="field-body">
-        <div class="field">
-          <div class="control">
-            <input class="input cityName" type="text" placeholder="Enter city name...">
-          </div>
-        </div>
-      </div>
-
-      <div class="field-body">
-        <div class="field">
-          <div class="control">
-            <button class="button is-primary" id="searchBtn">
-              Search!
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="field is-horizontal">
-      <div class="field-label">
-        <label class="label inputs-label-color">Check all interests</label>
-      </div>
-      <div class="field-body">
-        <div class="field">
-          <div class="control">
-            <label class="checkbox inputs-label-color">
-              <input type="checkbox nightLife">
-              Night Life
-            </label>
-            <label class="checkbox inputs-label-color">
-              <input type="checkbox museums">
-              Culture Museums
-            </label>
-            <label class="checkbox inputs-label-color">
-              <input type="checkbox music">
-              Music
-            </label>
-            <label class="checkbox inputs-label-color">
-              <input type="checkbox foodBev">
-              Food and Beverage
-            </label>
-            <label class="checkbox inputs-label-color">
-              <input type="checkbox hotels">
-              Hotels in area
-            </label>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
+  <div class="backgroundImg"></div>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
