Added Name field to users table, cleaned up some comments and misc. old code.

--- a/public/main.html
+++ b/public/main.html
@@ -15,7 +15,7 @@
 <body>
 
   <section class="hero is-medium has-bg-img">
-    <h2 class="welcomeMsg">Welcome <span class="member-name"></span></h2>
+    <h2 class="welcomeMsg">Welcome, <span class="member-name"></span><!DOCTYPE html></h2>
     <div class="hero-body">
       <div class="container">
         <h1 class="title is-1">Trip Planner</h1>
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="field is-horizontal">
+    <div class="field is-horizontal" id="test">
       <div class="field-label">
         <label class="label">Please select options to include in your itinerary!</label>
       </div>
@@ -102,6 +102,8 @@
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script type="text/javascript" src="js/search.js"></script>
+  <script type="text/javascript" src="js/members.js"></script>
+  <script type="text/javascript" src="js/choices.js"></script>
 
 </body>
 
