Corrected user object passing data to welcome message

--- a/public/main.html
+++ b/public/main.html
@@ -15,7 +15,7 @@
 <body>
 
   <section class="hero is-medium has-bg-img">
-    <h2 class="welcomeMsg">Welcome, <span class="member-name"></span><!DOCTYPE html></h2>
+    <h2 class="welcomeMsg">Welcome, <span class="member-name"></span><!DOCTYPE html>!</h2>
     <div class="hero-body">
       <div class="container">
         <h1 class="title is-1">Trip Planner</h1>
