Added links for googlefonts

--- a/public/main.html
+++ b/public/main.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito|Poppins|Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   <link type="favicon" href="img/favicon.jpg">
   <title>Vacation Planner</title>
@@ -15,7 +16,8 @@
 <body>
 
   <section class="hero is-medium has-bg-img">
-    <h2 class="welcomeMsg">Welcome, <span class="member-name"></span><!DOCTYPE html>!</h2>
+    <h2 class="welcomeMsg">Welcome, <span class="member-name"></span>
+      <!DOCTYPE html>!</h2>
     <div class="hero-body">
       <div class="container">
         <h1 class="title is-1">Trip Planner</h1>
