--- a/public/main.html
+++ b/public/main.html
@@ -85,7 +85,7 @@
 
     <div class="field-body">
       <div class="field">
-        <div class="control">
+        <div class="control" id="submitwrapper">
           <button class="button" id="submit">
             Submit!
           </button>
