--- a/public/main.html
+++ b/public/main.html
@@ -15,6 +15,47 @@
 
 <body>
 
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="#">
+        <img src="./img/favicon.png" width="66" height="66">
+      </a>
+
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+        data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item">
+          Home
+        </a>
+
+        <a class="navbar-item">
+          About
+        </a>
+
+        <a class="navbar-item">
+          Contact
+        </a>
+      </div>
+
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="logoutBtn button is-light" href="/logout">
+              Log out
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+
   <section class="hero is-medium has-bg-img">
     <h2 class="welcomeMsg">Welcome, <span class="member-name"></span>
       <!DOCTYPE html>!</h2>
@@ -24,9 +65,6 @@
         <h2 class="subtitle">One less thing for your to-do list</h2>
       </div>
     </div>
-    <a class="logoutBtn" href="/logout">
-      Log out
-    </a>
   </section>
 
   <div class="box">
