--- a/public/main.html
+++ b/public/main.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito|Poppins|Quicksand&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/styleMain.css">
   <link type="favicon" href="img/favicon.jpg">
   <title>Vacation Planner</title>
 </head>
@@ -18,7 +18,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="#">
-        <img src="./img/favicon.png" width="66" height="66">
+        <img src="./img/favicon.png" title="JNT Enterprises" width="46">
       </a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -31,7 +31,7 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item">
+        <a class="navbar-item" href="main.html">
           Home
         </a>
 
@@ -39,7 +39,7 @@
           About
         </a>
 
-        <a class="navbar-item">
+        <a class="navbar-item" href="contact.html">
           Contact
         </a>
       </div>
@@ -141,9 +141,9 @@
     crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script type="text/javascript" src="js/choices.js"></script>
   <script type="text/javascript" src="js/search.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
+  <script type="text/javascript" src="js/choices.js"></script>
 
 </body>
 
