--- a/public/main.html
+++ b/public/main.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito|Poppins|Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="stylesheets/styleMain.css">
-  <link type="favicon" href="img/favicon.jpg">
+  <link type="favicon" href="img/favicon.png">
   <title>Vacation Planner</title>
 </head>
 
