linked the new about page

--- a/public/main.html
+++ b/public/main.html
@@ -35,7 +35,7 @@
           Home
         </a>
 
-        <a class="navbar-item">
+        <a class="navbar-item" href="about.html">
           About
         </a>
 
@@ -61,7 +61,7 @@
       <!DOCTYPE html>!</h2>
     <div class="hero-body">
       <div class="container">
-        <h1 class="title is-1">Trip Planner</h1>
+        <h1 class="title is-1">Vacation Planner</h1>
         <h2 class="subtitle">One less thing for your to-do list</h2>
       </div>
     </div>
