--- a/public/contact.html
+++ b/public/contact.html
@@ -35,7 +35,7 @@
           Home
         </a>
 
-        <a class="navbar-item">
+        <a class="navbar-item" href="about.html">
           About
         </a>
 
