Contact and about (#42)
* new potential background imagery

* added a few classes and id's for styling purposes

* added mailto: functionality so clients can contact us via email

* new css file for each of the main.html and the contact.html pages

* new html page for contacting us

* updated email address

* new stylesheets for index.html and for signup.html

* refactored to remove bootstrap and use Bulma instead

* updated favicon

* reverting back to bootstrap for now. There was too much dependent code that would have to be changed to support switching from bootstrap to bulma at this late stage in the project.

* updated styling for contact page

* I put the original code back in. If we have time we'll bulma-ize index.html and signup.html

* linked the new about page

* style updates for contact page (darker send button) and created new stylesheet for About page

* initial commit

* new background image for About page

--- a/public/about.html
+++ b/public/about.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito|Poppins|Quicksand&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="stylesheets/styleContact.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/styleAbout.css">
   <link type="favicon" href="img/favicon.png">
   <title>Vacation Planner</title>
 </head>
@@ -56,55 +56,25 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
-    <div class="row" id="contactLabel">
-      <div class="col-md-12">
-        <h4>Contact</h4>
+  <div class="row">
+    <div class="col-md-11 divider">
+    </div>
+  </div>
+  <div class="wrapper">
+    <div class="box">
+      <div class="field">
+        JNT Enterprises is a full-service web-design firm focused on one mission: to deliver leading edge software
+        solutions to our clients. We pride ourselves
+        on our customer-centric, consultative business model in which we listen first to ensure we understand exactly
+        what our clients ask for before making
+        any recommendations. Your business is unique, and together we will develop custom solutions for your every need.
+        Whether you are a large corporation,
+        a small business, or somewhere in between, our team is here to help your team be the best it can be. Get in
+        touch using our Contact page and let us
+        show you how we can work together to exceed your expectations at every turn.
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-11 divider">
-      </div>
-    </div>
-    <div>
-      <form>
-        <div class="row" id="namelabel">
-          <div class="col-md-6">
-            <label id="namelabel">Name</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <input id="namefield" placeholder="John Smith">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <label id=emailLabel>Email</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <input id="emailfield" placeholder="example@gmail.com">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <label id="messageLabel">Message</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <textarea id="messagefield" placeholder="Your message here"></textarea>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <button class="button" id="submitbutton" type="submit" title="Submit">Send</button>
-          </div>
-        </div>
-      </form>
-    </div>
+  </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
