--- a/public/about.html
+++ b/public/about.html
@@ -18,7 +18,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="#">
-        <img src="./img/favicon.png" width="66" height="66">
+        <img src="./img/favicon.png" width="46">
       </a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
