minor styling updates

--- a/public/about.html
+++ b/public/about.html
@@ -67,7 +67,9 @@
         solutions to our clients. We pride ourselves
         on our customer-centric, consultative business model in which we listen first to ensure we understand exactly
         what our clients ask for before making
-        any recommendations. Your business is unique, and together we will develop custom solutions for your every need.
+        any recommendations.
+        <br><br>
+        Your business is unique, and together we will develop custom solutions for your every need.
         Whether you are a large corporation,
         a small business, or somewhere in between, our team is here to help your team be the best it can be. Get in
         touch using our Contact page and let us
