--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
+        Vacation Planner
       </div>
     </div>
   </nav>
