--- a/public/signup.html
+++ b/public/signup.html
@@ -1,53 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
-  <title>Passport Authentication</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito|Poppins|Quicksand&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="stylesheets/styleSignup.css">
+  <link type="favicon" href="img/favicon.png">
+  <title>Vacation Planner</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        Vacation Planner
-      </div>
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="#">
+        <img src="./img/favicon.png" width="46">
+      </a>
     </div>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
-        <form class="signup">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <label for="fullName">Full Name</label>
-            <input type="name" class="form-control" id="name-input" placeholder="Name">
-          </div>
-          <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            <span class="sr-only">Error:</span> <span class="msg"></span>
-          </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
-        </form>
-        <br />
-        <p>Or log in <a href="/login">here</a></p>
-      </div>
-    </div>
-  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/signup.js"></script>
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <p class="navbar-item">
+          Trip Planner
+        </p>
+      </div>
+    </div>
+
+  </nav>
+
+  <div class="container-fluid">
+
+    <div class="box signup">
+      <h2>Sign Up Form</h2>
+      <br>
+      <div class="field">
+        <label for="exampleInputEmail1" class="label">Email address</label>
+        <div class="control">
+          <input class="input" id="email-input" type="email" placeholder="e.g Alexsmith@gmail.com">
+        </div>
+      </div>
+
+      <div class="field">
+        <label for="exampleInputPassword1" class="label">Password</label>
+        <div class="control">
+          <input class="input" id="password-input" type="password" placeholder="Enter a password">
+        </div>
+      </div>
+
+      <div class="field">
+        <label for="fullName" class="label">Full Name</label>
+        <div class="control">
+          <input type="name" class="input" id="name-input" placeholder="e.g. Alex Smith">
+        </div>
+      </div>
+      <button type="submit" class="buttons" id="signupBtn">Sign up</button>
+      <p> Or log in <a href="/index.html">here</a></p>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/signup.js"></script>
 
 </body>
 
