minor style refinements

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <div class="container-fluid">
 
     <div class="box login">
-      <h2>Login Form</h2>
+      <h2>Login</h2>
       <br>
       <div class="field">
         <label for="exampleInputEmail1" class="label">Email address</label>
@@ -49,7 +49,7 @@
           <input class="input" id="password-input" type="password" placeholder="Enter your password">
         </div>
       </div>
-      <button type="submit" class="buttons" id="loginBtn">Login</button>
+      <button type="submit" class="button" id="loginBtn">Login</button>
       <br>
       <br>
       <p> Or sign up <a href="/signup.html">here</a></p>
