--- a/public/signup.html
+++ b/public/signup.html
@@ -24,7 +24,7 @@
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
         <p class="navbar-item">
-          Trip Planner
+          Vacation Planner
         </p>
       </div>
     </div>
@@ -34,7 +34,7 @@
   <div class="container-fluid">
 
     <div class="box signup">
-      <h2>Sign Up Form</h2>
+      <h2>Sign Up</h2>
       <br>
       <div class="field">
         <label for="exampleInputEmail1" class="label">Email address</label>
@@ -56,7 +56,7 @@
           <input type="name" class="input" id="name-input" placeholder="e.g. Alex Smith">
         </div>
       </div>
-      <button type="submit" class="buttons" id="signupBtn">Sign up</button>
+      <button type="submit" class="button" id="signupBtn">Sign up</button>
       <p> Or log in <a href="/index.html">here</a></p>
     </div>
 
