updated app name to Vacationer

--- a/public/about.html
+++ b/public/about.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito|Poppins|Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="stylesheets/styleAbout.css">
   <link type="favicon" href="img/favicon.png">
-  <title>Vacation Planner</title>
+  <title>Vacationer</title>
 </head>
 
 <body>
