--- a/public/signup.html
+++ b/public/signup.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito|Poppins|Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="stylesheets/styleSignup.css">
   <link type="favicon" href="img/favicon.png">
-  <title>Vacation Planner</title>
+  <title>Vacationer</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
         <p class="navbar-item">
-          Vacation Planner
+          Vacationer
         </p>
       </div>
     </div>
