--- a/public/main.html
+++ b/public/main.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito|Poppins|Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="stylesheets/styleMain.css">
   <link type="favicon" href="img/favicon.png">
-  <title>Vacation Planner</title>
+  <title>Vacationer</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
     <h2 class="welcomeMsg">Welcome, <span class="member-name"></span>
       <!DOCTYPE html>!</h2>
     <div class="hero-body">
-      <h1 class="title is-1">Vacation Planner</h1>
+      <h1 class="title is-1">Vacationer</h1>
       <h2 class="subtitle">One less thing for your to-do list</h2>
     </div>
   </section>
