--- a/public/main.html
+++ b/public/main.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/styleMain.css">
   <link type="favicon" href="img/favicon.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-  <title>Weekender</title>
+  <title>Vacationer</title>
 </head>
 
 <body>
@@ -61,7 +61,7 @@
     <h2 class="welcomeMsg">Welcome, <span class="member-name"></span>
       <!DOCTYPE html>!</h2>
     <div class="hero-body">
-      <h1 class="title is-1">Weekender</h1>
+      <h1 class="title is-1">Vacationer</h1>
       <h2 class="subtitle">One less thing for your to-do list</h2>
     </div>
   </section>
